fix(api): fix contact endpoints
